--- a/feedback.html
+++ b/feedback.html
@@ -126,7 +126,7 @@
 
 <!-- FORM SARAN -->
 <div class="form-wrapper">
-    <form onsubmit="kirimEmail(); return false;">
+    <form action="kirim_feedback.php" method="post">
         <div class="form-row">
     <div class="form-group">
         <label>Nama *</label>
