--- a/tentang.html
+++ b/tentang.html
@@ -93,7 +93,7 @@ Telepon: (0751) 123456</p>
 
     <div class="unit-wrapper">
 
-    <div class="info-grid">
+    <div class="row-unit">
         <div class="info-box">
             <h3>Kantor Imigrasi Kelas I TPI PADANG</h3>
         </div>
