--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 <header class="header">
     <div class="header-container">
         <!-- HAMBURGER BUTTON -->
-<div class="hamburger" onclick="toggleMenu()">
-    <span></span>
-    <span></span>
-    <span></span>
-</div>
+<nav class="nav">
+    <ul class="nav-menu">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#layanan">Layanan</a></li>
+        <li><a href="#profil">Profil</a></li>
+    </ul>
+</nav>
+
 
         <div class="logo">
             <img src="images/logo.png" alt="Logo Imigrasi">
