--- a/faq.html
+++ b/faq.html
@@ -76,7 +76,7 @@
             <img src="images/logo.png" alt="Logo Imigrasi">
             <div class="logo-text">
                 <strong>LAPAK KANWIL SUMBAR</strong>
-                <span>Layanan Paspor Keimigrasian KANWIL SUMBAR</span>
+                <span>Layanan Permohonan Keimigrasian KANWIL SUMBAR</span>
             </div>
         </div>
 
@@ -207,7 +207,7 @@ faqItems.forEach(item => {
         <!-- KIRI -->
         <div class="footer-left">
             <h3>LAPAK KANWIL SUMBAR</h3>
-            <p>Layanan Paspor Keimigrasian KANWIL SUMBAR</p>
+            <p>Layanan Permohonan Keimigrasian KANWIL SUMBAR</p>
         </div>
 
         <!-- TENGAH -->
