--- a/tentang.html
+++ b/tentang.html
@@ -50,7 +50,9 @@ Email:
 imigrasi.sumbar@imigrasi.go.id
 Telepon: (0751) 123456</p>
 <br>
-<img src="images/gambar kantor.png" alt="Gambar Kantor" class="hero-image">
+<div class="hero-images">
+    <img src="images/gambar kantor.png" alt="Gambar Kantor">
+</div>
     </br>
 </section> <!-- HERO -->
 
