--- a/tentang.html
+++ b/tentang.html
@@ -50,9 +50,8 @@ Email:
 imigrasi.sumbar@imigrasi.go.id
 Telepon: (0751) 123456</p>
 <br>
-<div class="hero-images">
-    <img src="images/gambar kantor.png" alt="Gambar Kantor">
-</div>
+<img src="images/gambar kantor.png" alt="Gambar Kantor" class="hero-image">
+
     </br>
 </section> <!-- HERO -->
 
